update extension and readme

--- a/examples/code-mods/vs-code-plugin/tsconfig.json
+++ b/examples/code-mods/vs-code-plugin/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES6",
     "outDir": "./out",
     "rootDir": "./src",
-    "strict": true
+    "strict": true,
+    "moduleResolution": "Node"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "out"]
