--- a/examples/code-mods/vs-code-plugin/package.json
+++ b/examples/code-mods/vs-code-plugin/package.json
@@ -12,6 +12,9 @@
   "activationEvents": [
     "onLanguage:typescript"
   ],
+  "files": [
+    "**/*"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
